# connect4-bot

./: .gitignore  README.md  binding.gyp  development.md  index.js  package-lock.json  package.json  tsconfig.json
cpp/: .clang-format  CMakeLists.txt  Makefile
cpp/src/: CustomOStreams.h  Game.cpp  Main.cpp  NegamaxBot.cpp  TranspositionTable.cpp  greeting.cpp  index.cpp
cpp/src/tests/: Connect4GameTest.cpp  MainTest.cpp  PerformanceTest.cpp
src/: index.ts
src/cpp/: Greeter.cpp
src/ts/: index.ts
src/ts/types/: lib-types.d.ts
ts/: index.ts
ts/src/: index.ts
ts/src/types/: lib-types.d.ts
